few things updated

--- a/public/appsData.json
+++ b/public/appsData.json
@@ -151,9 +151,9 @@
     "id": 9,
     "description": "Share the moment with creative filters and lenses. Send disappearing photos and videos to friends.",
     "size": 143,
-    "reviews": 11500000,
+    "reviews": " 459 K",
     "ratingAvg": 4.1,
-    "downloads": 1800000000,
+    "downloads": "968 M",
     "ratings": [
       { "name": "1 star", "count": 575000 },
       { "name": "2 star", "count": 805000 },
